Fixing CSS issues on Mobile and tablets via Adrian's review

--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,9 @@ p {
   }
   /*Text above book now*/
   #hair_skin_nails {
-    height: 20px;
+    height: 70px;
     width: 400px;
+    margin-top: 37px;
   }
 }
 
@@ -125,4 +126,5 @@ h5 {
   width: 100%;
   /*Box shadow gives white padding*/
   box-shadow: inset 0 0 0 3px white;
+  font-family: 'Josefin Slab', sans-serif;
 }
